# bms-dashtray

./: .copier-answers.yml  .gitattributes  .gitignore  .mise.toml  .prettierignore  .release-please-manifest.json  CHANGELOG.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml  release-please-config.json
.claude/skills/generate-mock-beatoraja-data/: SKILL.md
.github/workflows/: build-tauri.yml  release-please.yml  storybook.yml  test-release-please.yml  test.yml  update-cargo-lock-on-release-please.yml
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: commands.rs  config.rs  db_reader.rs  diff_detector.rs  event_bridge.rs  file_watcher.rs  history_store.rs  lib.rs  main.rs  pipeline.rs  table_reader.rs
backend/src/db_reader/: best_score.rs  mod.rs  score_log.rs  song_metadata.rs
backend/tests/: e2e_pipeline.rs
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts  preview.tsx
frontend/src/: App.tsx  font-size.css  main.tsx  tauri-api.ts  test-helpers.ts  types.ts
frontend/src/components/: DistributionChart.stories.tsx  DistributionChart.test.tsx  DistributionChart.tsx  FilterTabs.stories.tsx  FilterTabs.test.tsx  FilterTabs.tsx  MainScreen.stories.tsx  MainScreen.tsx  PlayHistoryList.stories.tsx  PlayHistoryList.test.tsx  PlayHistoryList.tsx  PlayHistoryListContainer.test.tsx  PlayHistoryListContainer.tsx  PlayHistoryPanel.stories.tsx  PlayHistoryPanel.test.tsx  PlayHistoryPanel.tsx  SettingsScreen.stories.tsx  SettingsScreen.tsx  SettingsScreenContainer.test.tsx  SettingsScreenContainer.tsx  SetupScreen.stories.tsx  SetupScreen.test.tsx  SetupScreen.tsx  SetupScreenContainer.test.tsx  SetupScreenContainer.tsx  UpdateNotification.tsx  UpdateNotificationBar.stories.tsx  UpdateNotificationBar.tsx  clear-lamp-animations.css  filterRecords.test.ts  filterRecords.ts
frontend/src/hooks/: useUpdateChecker.ts
scripts/: bootstrap
