[package]
name = "bms-dashtray"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
notify = "=7.0.0"
rusqlite = { version = "=0.38.0", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.10.3", features = ["macos-private-api"] }
tauri-plugin-dialog = "=2.6.0"
thiserror = "=2.0.18"
uuid = { version = "=1.22.0", features = ["v4"] }

[dev-dependencies]
rstest = "=0.26.1"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
