[package]
name = "bms-dashtray"
version = "0.1.0"
edition = "2024"

[build-dependencies]
serde_json = { version = "=1.0.149", features = ["preserve_order"] }
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
chrono = { version = "=0.4.44", default-features = false, features = ["clock"] }
flate2 = "=1.1.1"
notify = "=7.0.0"
rusqlite = { version = "=0.32.1", features = ["bundled"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tauri = { version = "=2.10.3", features = ["macos-private-api"] }
tauri-plugin-dialog = "=2.6.0"
thiserror = "=2.0.18"
uuid = { version = "=1.22.0", features = ["v4"] }

[dev-dependencies]
indoc = "=2.0.7"
rstest = "=0.26.1"
tempfile = "=3.27.0"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
